# Knowledge-Copilot-Hybrid-RAG-Document-Intelligence-Platform

./: README.md  app.py  logger.py  main.py  pyproject.toml  requirements.txt  sample_test.txt
api/: dependencies.py  ingestion_routes.py  retrieval_routes.py
core/: exception.py
ingestion/: bm25_store.py  embedder.py  ingestion_service.py  loder.py  metadata.py  reciever.py  splitter.py  vector_store.py
retrieval/: cross_encoder.py  dense.py  reranker.py  sparse.py
schemas/: api_models.py
services/: ingestion_service.py  retrival_service.py
storage/: bm25_index.pkl  metadata.db  test_bm25_index.pkl  test_metadata.db
storage/qdrant_db/collection/knowledge_base/: storage.sqlite
tests/: samle_text.txt  test_ingestion.py  test_retrieval.py
